@@ -16,9 +16,12 @@
 
 package org.gradle.integtests.samples
 
+import org.gradle.api.JavaVersion
 import org.gradle.integtests.fixtures.AbstractIntegrationTest
 import org.gradle.integtests.fixtures.DefaultTestExecutionResult
+import org.gradle.integtests.fixtures.ZincScalaCompileFixture
 import org.gradle.integtests.fixtures.Sample
+import org.gradle.integtests.fixtures.executer.GradleContextualExecuter
 import org.gradle.test.fixtures.file.TestFile
 import org.junit.Rule
 import org.junit.Test
@@ -28,6 +31,7 @@ import static org.hamcrest.Matchers.containsString
 class SamplesMixedJavaAndScalaIntegrationTest extends AbstractIntegrationTest {
 
     @Rule public final Sample sample = new Sample(testDirectoryProvider, 'scala/mixedJavaAndScala')
+    @Rule public final ZincScalaCompileFixture zincScalaCompileFixture = new ZincScalaCompileFixture(executer, testDirectoryProvider)
 
     @Test
     public void canBuildJar() {
@@ -54,6 +58,13 @@ class SamplesMixedJavaAndScalaIntegrationTest extends AbstractIntegrationTest {
 
     @Test
     public void canBuildDocs() {
+        if (GradleContextualExecuter.isDaemon()) {
+            // don't load scala into the daemon as it exhausts permgen
+            return
+        } else if (!GradleContextualExecuter.isEmbedded() && !GradleContextualExecuter.isParallel() && !JavaVersion.current().isJava8Compatible()) {
+            executer.withBuildJvmOpts('-XX:MaxPermSize=128m')
+        }
+
         TestFile projectDir = sample.dir
         executer.inDirectory(projectDir).withTasks('clean', 'javadoc', 'scaladoc').run()
 
